Add number version

--- a/Tarefa_1-PrimeiroCliente/app/src/main/res/layout/activity_tela_splash.xml
+++ b/Tarefa_1-PrimeiroCliente/app/src/main/res/layout/activity_tela_splash.xml
@@ -26,4 +26,11 @@
         android:textSize="22sp"
         android:textStyle="bold"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Version 1.0"
+        android:textColor="@color/texts"
+        android:layout_marginTop="24dp" />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
