--- a/Tarefa_1-PrimeiroCliente/app/src/main/res/layout/activity_tela_splash.xml
+++ b/Tarefa_1-PrimeiroCliente/app/src/main/res/layout/activity_tela_splash.xml
@@ -29,7 +29,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Version 1.0"
+        android:text="@string/version"
         android:textColor="@color/texts"
         android:layout_marginTop="24dp" />
 
