--- a/03-AppMinhaIdeia/app/src/main/res/layout/activity_splash.xml
+++ b/03-AppMinhaIdeia/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/ic_launcher"
-    tools:context=".SplashActivity">
+    tools:context=".view.SplashActivity">
 
     <ImageView
         android:id="@+id/imageView"
