--- a/03-AppMinhaIdeia/app/src/main/res/layout/activity_splash.xml
+++ b/03-AppMinhaIdeia/app/src/main/res/layout/activity_splash.xml
@@ -27,14 +27,11 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/txtAppVersion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="240dp"
-        android:gravity="bottom"
-        android:text="@string/version"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:textStyle="normal" />
+        android:gravity="bottom" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
